fixed spacing between top of nav bar and top of page

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {margin:0px;}
     font-family: balsamiq sans;
     background-color: #ffffff;
     position: sticky;
-    top:68px;
+    top:0px;
     z-index:50;
     box-shadow: 0px 1px 5px #aaaaaa;}
 .nav li{
